[build-system]
requires = ["setuptools>=70.2.0", "wheel>=0.44.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdbp"
readme = "README.md"
dynamic = [
    "urls",
    "version",
    "license",
    "authors",
    "scripts",
    "keywords",
    "classifiers",
    "description",
    "maintainers",
    "entry-points",
    "dependencies",
    "requires-python",
    "optional-dependencies",
]

[tool.setuptools.packages.find]
where = ["src"]

[flake8]
ignore = ["W503"]
